# whisky

./: .gitignore  README.md  pyproject.toml
script/: app.py
