[tool.poetry]
name = "whiskey"
version = "0.1.0"
description = ""
authors = ["ym27"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.28.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
